syntax = "proto3";

package pb;

import "google/protobuf/any.proto";

message OpBaseReturn {
	uint64 serverTs = 1;
	string error = 2;
}

message GameAuth {
	uint32 id = 1;
	string sign = 2;
	uint32 ts = 3;
}

message Play {
	string foo = 1;
	uint32 bar = 2;
}

message MsgA {
	OpBaseReturn base = 1;
	repeated google.protobuf.Any msg = 2;
}
